rename folder -> directory